--- a/SistemaDoLeoBlazor.WEB/Pages/Index.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/Index.razor
@@ -7,3 +7,14 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+<div class="m-2 p-2">
+    <button class="btn btn-primary" @onclick="AddToast">Add a Toast</button>
+</div>
+
+@code {
+    [Inject] private ToasterService? _toasterService { get; set; }
+    private ToasterService toasterService => _toasterService!;
+
+    private void AddToast()
+    => toasterService.AddToast(Toast.NewToast("Hello World", "Hello from Blazor", MessageColour.Danger, 10));
+}
