--- a/SistemaDoLeoBlazor.WEB/_Imports.razor
+++ b/SistemaDoLeoBlazor.WEB/_Imports.razor
@@ -10,3 +10,4 @@
 @using SistemaDoLeoBlazor.WEB.Shared
 @using SistemaDoLeoBlazor.MODELS.OperadorDTOs
 @using SistemaDoLeoBlazor.WEB.Services
+@using SistemaDoLeoBlazor.WEB.Toaster
