Implementado proximo registro no cadastro de Operador e feito ajustes.

--- a/SistemaDoLeoBlazor.WEB/_Imports.razor
+++ b/SistemaDoLeoBlazor.WEB/_Imports.razor
@@ -9,5 +9,6 @@
 @using SistemaDoLeoBlazor.WEB
 @using SistemaDoLeoBlazor.WEB.Shared
 @using SistemaDoLeoBlazor.MODELS.OperadorDTOs
-@using SistemaDoLeoBlazor.WEB.Services
+@using SistemaDoLeoBlazor.WEB.Services.OperadorService.OperadorService
+@using SistemaDoLeoBlazor.WEB.Services.ProximoRegistroService
 @using SistemaDoLeoBlazor.WEB.Toaster
