--- a/SistemaDoLeoBlazor.WEB/Pages/CadOperador.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/CadOperador.razor
@@ -1,5 +1,6 @@
 ﻿@page "/CadOperador"
 @inject IOperadorService operadorService
+@inject IProximoRegistroService registroService
 
 <PageTitle>Cadastro Operador</PageTitle>
 
@@ -73,13 +74,13 @@ else if (Operador is not null)
                                                     <label class="form-check-label" for="formCheck-1" style="margin-top: 8px;">Exibir Senha</label>
                                                 </div>
                                                 <div class="form-check" style="width: 140.25px;">
-                                                    <input class="form-check-input" type="checkbox" id="formCheck-3" style="margin-top: 12px;" 
-                                                           name="ChkSenha" disabled="@stsChkAdmin" checked="@Operador.admin">
+                                                    <input class="form-check-input" type="checkbox" id="formCheck-3" style="margin-top: 12px;"
+                                                       name="ChkSenha" disabled="@stsChkAdmin" @bind="@Operador.admin">
                                                     <label class="form-check-label" for="formCheck-3" style="margin-top: 8px;">Adminstrador</label>
                                                 </div>
                                                 <div class="form-check" style="width: 94.5px;">
                                                     <input class="form-check-input" type="checkbox" id="formCheck-2" style="margin-top: 12px;" 
-                                                           name="ChkSenha" disabled="@stsChkInativo" checked="@Operador.inativo">
+                                                           name="ChkSenha" disabled="@stsChkInativo" @bind="@Operador.inativo">
                                                     <label class="form-check-label" for="formCheck-2" style="margin-top: 8px;">Inativo</label>
                                                 </div>
                                         </div>
