Adicionado Session Storage para controlar o Operador logado.
Configurado acessos a tela de Operador

--- a/SistemaDoLeoBlazor.WEB/Pages/CadOperador.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/CadOperador.razor
@@ -1,6 +1,7 @@
 ﻿@page "/CadOperador"
 @inject IOperadorService operadorService
 @inject IProximoRegistroService registroService
+@inject IOperadorLocalService session
 
 <PageTitle>Cadastro Operador</PageTitle>
 
