--- a/SistemaDoLeoBlazor.WEB/Pages/Index.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject IOperadorLocalService service
 
 <PageTitle>Index</PageTitle>
 
@@ -8,13 +9,92 @@ Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
 <div class="m-2 p-2">
-    <button class="btn btn-primary" @onclick="AddToast">Add a Toast</button>
+    @* <button class="btn btn-primary" @onclick="AddToast()">Add a Toast</button> *@
 </div>
+
+<br />
+
+<div class="m-2 p-2">
+    <button class="btn btn-primary" @onclick="IniciarSessao">Iniciar Sessão</button>
+</div>
+
+<div class="m-2 p-2">
+    <button class="btn btn-primary" @onclick="PegarDadosSessao">Get Sessão</button>
+</div>
+
+<div class="m-2 p-2">
+    <button class="btn btn-primary" @onclick="ApagarDados">Apagar Sessão</button>
+</div>
+
+@if(operador is not null)
+{
+    <p>ID: @operador.id</p>
+    <p>Nome: @operador.nome</p>
+    <p>Senha: @operador.senha</p>
+    <p>Admin: @operador.admin</p>
+    <p>Inativo: @operador.inativo</p>
+}
+
+@if(telas is not null)
+{
+    foreach(var tela in telas)
+    {
+        <a>id: @tela.id  -  </a>
+        <a>nome: @tela.nome  -  </a>
+        <a>ativo: @tela.ativo  -  </a>
+        <a>novo: @tela.novo  -  </a>
+        <a>editar: @tela.editar  -  </a>
+        <a>excluir: @tela.excluir  -  </a>
+        <a>operador: @tela.idOperador  -  </a>
+        <a>id tela: @tela.idTela</a>
+
+        <br />
+    }
+}
 
 @code {
     [Inject] private ToasterService? _toasterService { get; set; }
     private ToasterService toasterService => _toasterService!;
+    private OperadorDTO operador { get; set; }
+    private IEnumerable<OperadorTelaDTO> telas {get;set;}
 
-    private void AddToast()
-    => toasterService.AddToast(Toast.NewToast("Hello World", "Hello from Blazor", MessageColour.Danger, 10));
+    private void AddToast(string titulo, string mensagem)
+    => toasterService.AddToast(Toast.NewToast(titulo, mensagem, MessageColour.Danger, 10));
+
+    protected override Task OnInitializedAsync()
+    {
+        return base.OnInitializedAsync();
+    }
+
+    private async void IniciarSessao()
+    {
+        // var operador = new OperadorDTO
+        // {
+        //     admin = true,
+        //     id = 1,
+        //     inativo = false,
+        //     nome = "Leo",
+        //     senha = "1234"
+        // };
+        await service.SetSessao(1);
+        // var telas = await operadorService.GetTelasByOperador(1);
+
+        // sessao.SetItemAsync("OperadorAtual", operador);
+        // sessao.SetItemAsync("OperadorTelas", telas);
+
+        AddToast("Sessão", "Sessão Criada com sucesso");
+    }
+
+    private async void PegarDadosSessao()
+    {
+        operador = await service.GetSessaoOperador();
+        telas = await service.GetSessaoTelas();
+
+        AddToast("Sessão", "Sessão Get com sucesso");
+    }
+
+    private async void ApagarDados()
+    {
+        await service.LimparSessao();
+    }
 }
