--- a/SistemaDoLeoBlazor.WEB/_Imports.razor
+++ b/SistemaDoLeoBlazor.WEB/_Imports.razor
@@ -12,3 +12,4 @@
 @using SistemaDoLeoBlazor.WEB.Services.OperadorService.OperadorService
 @using SistemaDoLeoBlazor.WEB.Services.ProximoRegistroService
 @using SistemaDoLeoBlazor.WEB.Toaster
+@using SistemaDoLeoBlazor.WEB.Services.OperadorLocalStorageService
