--- a/SistemaDoLeoBlazor.WEB/_Imports.razor
+++ b/SistemaDoLeoBlazor.WEB/_Imports.razor
@@ -13,3 +13,4 @@
 @using SistemaDoLeoBlazor.WEB.Services.ProximoRegistroService
 @using SistemaDoLeoBlazor.WEB.Toaster
 @using SistemaDoLeoBlazor.WEB.Services.OperadorLocalStorageService
+@using SistemaDoLeoBlazor.WEB.Services.CategoriaService
