--- a/SistemaDoLeoBlazor.WEB/_Imports.razor
+++ b/SistemaDoLeoBlazor.WEB/_Imports.razor
@@ -14,3 +14,5 @@
 @using SistemaDoLeoBlazor.WEB.Toaster
 @using SistemaDoLeoBlazor.WEB.Services.OperadorLocalStorageService
 @using SistemaDoLeoBlazor.WEB.Services.CategoriaService
+@using SistemaDoLeoBlazor.WEB.Services.FormaPgtoService
+@using SistemaDoLeoBlazor.WEB.Services.ProdutoService
