Adicionado cadastro de cliente e adicionado validações de acesso as opções da tela, conforme cadastro de operador.

--- a/SistemaDoLeoBlazor.WEB/Pages/CadOperador.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/CadOperador.razor
@@ -147,7 +147,7 @@ else if (Operador is not null)
                                                 {
                                                     @foreach (var tela in OperadorTelas)
                                                     {
-                                                        <tr>
+                                                        <tr id="configTelas">
                                                             <td class="text-truncate" style="max-width: 200px;width: 239.5px;">@tela.nome</td><!-- Start: Ativo -->
                                                             <td class="text-center" style="width: 55px;">
                                                                 <input type="checkbox" disabled="@stsChkItemAtivo" @bind="tela.ativo">
