--- a/SistemaDoLeoBlazor.WEB/_Imports.razor
+++ b/SistemaDoLeoBlazor.WEB/_Imports.razor
@@ -16,3 +16,4 @@
 @using SistemaDoLeoBlazor.WEB.Services.CategoriaService
 @using SistemaDoLeoBlazor.WEB.Services.FormaPgtoService
 @using SistemaDoLeoBlazor.WEB.Services.ProdutoService
+@using SistemaDoLeoBlazor.WEB.Services.CLienteService
